2011-05-17 Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/agentes/estado_agente.php: fixed the search.

2011-06-06  Dario Rodriguez  <dario.rodriguez@artica.es>

	* godmode/servers/manage_recontask.php: User with flag AW can manage recon
	task, only for their group.
	* godmode/servers/modificar_server.php: User with AW flag can view server
	status but only Pandora Admin can delete one of them.
	* godmode/servers/manage_recontask_form.php: User with flag AW can manage recon
	task, but only for their group.
	* godmode/menu.php: Allowing user with flag AW see manage server tab and 
	manage recon task subtab.

2011-06-01  Ramon Novoa  <rnovoa@artica.es>

	* include/auth/mysql.php: Merged from trunk. Do not allow empty
	  passwords when authenticating against an LDAP server.

2011-05-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Typo fixed 
	in a function name

2011-05-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Added a hidden 
	control in the module form to keep the type when the type combo
	is disabled

2011-05-17 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_db.php: added the parameter to delete_only in the call
	to enterprise function.

2011-05-10  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php: Merged from trunk. Do not count the
	  empty start of an interval as 0 (affects AVG and SLA).

2011-05-06  Junichi Satoh  <junichi@rworks.jp>

	* godmode/alerts/alert_list.list.php: Fixed filter parameters are not
	taken over with offset selection.

2011-05-06  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_reporting_advanced_tab.php: Added a missing
	help file.

2011-05-04 Vanessa Gil <vanessa.gil@artica.es>

	*  operation/agentes/estado_agente.php: Fixed error on list of agents

2011-05-01 SAncho Lerena <slerena@artica.es>

	*  include/help/en/help_reporting_advanced_tab.php,